@@ -3,7 +3,7 @@
   <!-- set global properties for this build -->
   <property name="app" value="jfdhcp"/>
   <property name="home" location="../.."/>
-  <property name="version" value="0.2"/>
+  <property name="version" value="0.3"/>
 
   <import file="../../base.xml"/>
 
