@@ -1,5 +1,5 @@
 Package: jfdhcp
-Version: 0.2
+Version: 0.3
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
