@@ -1,5 +1,9 @@
 What's new...
 
+Jan 18/2016 : JF 10.7.0 released!
+  - jfDHCP/0.?
+    - support for multiple pools
+
 Dec 27/2015 : JF 10.6.0 released!
   - jfBroadcast/0.34
     - fix tray icon
